Bug 365145 - Percentage units not supported in border radius
Summary: Percentage units not supported in border radius
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-06 10:18 UTC by Andrea Iacovitti
Modified: 2016-07-06 10:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
testcase (569 bytes, text/html)
2016-07-06 10:18 UTC, Andrea Iacovitti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Iacovitti 2016-07-06 10:18:01 UTC
Created attachment 99885 [details]
testcase

As per summery.
See attached testcase.
Comment 1 Andrea Iacovitti 2016-07-06 10:33:57 UTC
Git commit 44a7dcf01dff8c055cb1f218574ece1500fb7e4f by Andrea Iacovitti.
Committed on 06/07/2016 at 10:18.
Pushed by aiacovitti into branch 'KDE/4.14'.

Support percentage unit specification in border radius.
Fixed background's clip path calculation (handle content-box).
Used QPoint(h,v) in the render to store horizontal/vertical radius.

M  +4    -4    khtml/css/css_renderstyledeclarationimpl.cpp
M  +4    -4    khtml/css/cssparser.cpp
M  +9    -15   khtml/css/cssstyleselector.cpp
M  +56   -47   khtml/rendering/render_box.cpp
M  +2    -1    khtml/rendering/render_box.h
M  +102  -101  khtml/rendering/render_object.cpp
M  +2    -2    khtml/rendering/render_object.h
M  +9    -0    khtml/rendering/render_style.cpp
M  +5    -5    khtml/rendering/render_style.h

http://commits.kde.org/kdelibs/44a7dcf01dff8c055cb1f218574ece1500fb7e4f