Support percentage unit specification in border radius. Fixed background's clip path calculation (handle content-box). Used QPoint(h,v) in the render to store horizontal/vertical radius.

BUG: 365145